# lead_scoring_poc

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
config/: column_mapping.py  config.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  OHAB模型训练报告_20260322.md  OHAB目标变量设计方案.md  QUICKSTART.md  SCRIPTS.md  TRAINING.md  TROUBLESHOOTING.md  model_validation.md  代码质量改进报告_20260323.md
notebooks/: exploration.ipynb
scripts/: convert_to_parquet.py  diagnose_data.py  generate_business_report.py  generate_local_plots.py  generate_ohab_report.py  generate_topk.py  merge_data.py  monitor.py  monitor_progress.py  parquet_to_csv.py  predict.py  quickstart.sh  run.py  test_adapter.py  train_arrive.py  train_arrive_oot.py  train_model.py  train_ohab.py  train_ohab_oot.py  train_order_after_drive.py  train_test_drive.py  train_test_drive_ensemble.py  validate_arrive_model.py  validate_ensemble.py  validate_model.py  validate_ohab_model.py  validate_test_drive_model.py
src/: __init__.py
tests/: test_business_logic_and_report.py  test_config_exclusions.py  test_feature_engineer_contract.py  test_feature_screening.py  test_generate_topk.py  test_hab_engine.py  test_hab_pipeline.py  test_helpers_logging.py  test_json_extractor.py  test_ohab_metrics.py  test_ohab_policy_and_metrics.py  test_ohab_runtime_planner.py  test_predictor_alignment.py  test_prep_cache.py  test_process_status.py  test_progress_callback.py  test_random_group_split.py  test_run_cli.py  test_scorecard.py  test_train_ohab_artifacts.py  test_tsv_adapt.py  (+7 more)
(+70 files in other folders)
